# ml-zoomcamp-2024-competition

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: data_exploration.ipynb
