[project]
name = "ml-zoomcamp-project"
version = "0.1.0"
description = "A forecasting ML project"
authors = ["javed Hassan "]
readme = "ReadMe.md"
requires-python = ">=3.11"

dependencies = [
    "lightgbm>=4.5.0, <5",
    "scikit-learn>=1.5.1, <2",
    "cloudpickle>=3.0.0, <4",
    "mlflow>=2.16.0, <3",
    "numpy>=1.26.4, <2",
    "pandas>=2.2.2, <3",
    "pyarrow==14.0.1",
    "scipy>=1.14.1, <2",
    "matplotlib>=3.9.2, <4",
    "pydantic==2.9.2",
    "tqdm>=4.64.0, <5",
    "prophet>=1.1, <2", # Added prophet
    "uvicorn>=0.15.0, <1"
]


[pyproject.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"
jupyter = "^1.0.0"
pylint = "^2.9.6"
isort = "^5.9.3"
pre-commit = "^2.13.0"

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"